test/deca/syntax/invalid/main_incomplet.deca
// Description:
//    tests de programme incorrect lexicalement (program non temriné)
//
// Resultats:
//    ligne 10 : Erreur, crochet non fermé
//
// Historique:
//    cree le 01/01/2020

{